--- a/.settings/org.eclipse.cdt.core.prefs
+++ b/.settings/org.eclipse.cdt.core.prefs
@@ -12,7 +12,7 @@ environment/project/cdt.managedbuild.config.gnu.exe.debug.721159017.157011383/ap
 environment/project/cdt.managedbuild.config.gnu.exe.debug.721159017.157011383/appendContributed=true
 environment/project/cdt.managedbuild.config.gnu.exe.debug.721159017.411245810/CFLAGS/delimiter=\:
 environment/project/cdt.managedbuild.config.gnu.exe.debug.721159017.411245810/CFLAGS/operation=replace
-environment/project/cdt.managedbuild.config.gnu.exe.debug.721159017.411245810/CFLAGS/value=-I/home/Dave/libs/cpputest-3.6/include -I/home/Dave/libs/cpputest-3.6/include/CppUTest -I/home/Dave/libs/cpputest-3.6/include/CppUTestExt -I${HOME}/libs/rapidjson/include/rapidjson
+environment/project/cdt.managedbuild.config.gnu.exe.debug.721159017.411245810/CFLAGS/value=-I../include -I"${HOME}/git/rapidjson/include/rapidjson" -I"${HOME}/git/cpputest/include/CppUTest" -I"${HOME}/git/cpputest/include/CppUTestExt"
 environment/project/cdt.managedbuild.config.gnu.exe.debug.721159017.411245810/CXXFLAGS/delimiter=\:
 environment/project/cdt.managedbuild.config.gnu.exe.debug.721159017.411245810/CXXFLAGS/operation=replace
 environment/project/cdt.managedbuild.config.gnu.exe.debug.721159017.411245810/CXXFLAGS/value=${CFLAGS}
